feature:Remove thrift Add Grpc Add Download Add XML